[package]
name = "ttlhashmap"
version = "0.1.0"
authors = ["Jan Danielsson <jan.danielsson@qrnch.com>"]
edition = "2018"
license = "0BSD"
categories = [ "algorithms" ]
keywords = [ "container", "hashmap", "map" ]
repository = "https://github.com/openqrnch/ttlhashmap"
description = "Optionally bounded HashMap-like container with decaying nodes."
exclude = [ "rustfmt.toml" ]

[dependencies]
